# JNI-Invoke-CMake-Conan-Demo

./: .gitignore  clean.bash  clean.ps1
src_cpp/: CMakeLists.txt  Dockerfile  Windows.Dockerfile  buildAndRunOnUbuntuDocker.bash  buildAndRunOnUbuntuDocker.ps1  main.cpp  runCMake.ps1
src_java_lib/src/: Main.java
